[package]
name = "stm32f103c8t6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "*"
cortex-m-rt = "*"
cortex-m-semihosting = "*"
panic-halt = "*"
nb = "0.1.2"
embedded-hal = "0.2.3"
[dependencies.stm32f1xx-hal]
version = "0.5.2"
features = ["stm32f100", "rt"]
#
[[bin]]
name = "stm32f103c8t6"
test = false
bench = false
#  Оптимизация кода
[profile.release]
codegen-units = 1
debug = true # Символы не увеличивающие размер на Flash
lto = true




